# osfm-edm

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEVIATIONS.md  PROGRESS.md  README.md  docker-compose.dev.yml  docker-compose.yml
crates/osfm-edm-agent/: Cargo.toml
crates/osfm-edm-agent/src/: config.rs  enrollment.rs  kernel_bridge.rs  main.rs
crates/osfm-edm-agent/src/jobs/: executor.rs  mod.rs
crates/osfm-edm-agent/src/policy/: engine.rs  mod.rs
crates/osfm-edm-agent/src/policy/enforcers/: linux.rs  macos.rs  mod.rs  windows.rs
crates/osfm-edm-agent/src/shell/: mod.rs  session.rs
crates/osfm-edm-agent/src/system_monitor/: linux.rs  macos.rs  mod.rs  windows.rs
crates/osfm-edm-agent/src/telemetry/: mod.rs  patches.rs  software.rs  system.rs
crates/osfm-edm-agent/src/transport/: mod.rs  protocol.rs  websocket.rs
crates/osfm-edm-common/: Cargo.toml
crates/osfm-edm-common/src/: device.rs  events.rs  jobs.rs  lib.rs  policy.rs  protocol.rs
crates/osfm-edm-common/tests/: serialization_tests.rs
crates/osfm-edm-server/: Cargo.toml
crates/osfm-edm-server/src/: config.rs  error.rs  main.rs  state.rs
crates/osfm-edm-server/src/api/: auth.rs  devices.rs  enroll.rs  groups.rs  jobs.rs  mod.rs  patches.rs  policies.rs  reports.rs  settings.rs  shell.rs  software.rs
crates/osfm-edm-server/src/db/: mod.rs
crates/osfm-edm-server/src/db/queries/: devices.rs  jobs.rs  mod.rs  policies.rs  software.rs
crates/osfm-edm-server/src/middleware/: audit.rs  auth.rs  mod.rs
crates/osfm-edm-server/src/services/: alert_engine.rs  job_queue.rs  mod.rs  notifications.rs  pki.rs  policy_engine.rs
crates/osfm-edm-server/src/ws/: agent_hub.rs  mod.rs
migrations/: 001_init_devices.sql  002_timescale_metrics.sql  003_policies.sql  004_groups.sql  005_software.sql  006_jobs.sql  007_alerts.sql  008_users.sql  009_audit_log.sql  010_certificates.sql  011_compliance_reports.sql
