[package]
name = "osfm-edm-server"
version.workspace = true
edition.workspace = true

[dependencies]
osfm-edm-common = { path = "../osfm-edm-common" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "time", "json", "migrate", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# TLS / PKI
rcgen = "0.13"
rustls = "0.23"

# 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Time
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Misc
dashmap = "5"
sha2 = "0.10"
futures-util = "0.3"

# Notifications
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
reqwest = { version = "0.12", features = ["json"] }
